# Labs

./: .gitignore  binar.c  digital.c  fgherfgbr.c  flow.c  gitbruh.docx  gitlel.docx  gitlol.docx  greetings.txt  hash1og.c  hash2.c  hash2og.c  heap(og).c  heap.c  heap1.c  index (1).js  index (2).js  index (3).js  index (4).js  index.c  index.js  insert.c  lab2.cpp  laba4.c  laba4.txt  laba4s.txt  laba4super.c  laba5.c  matrix  matrix.c  merge.c  mergesort.py  mib.c  proga  program1  program21  program41  program51  quicksort.c  result.csv  (+10 more)
Laba5/: shady.c  slim.c
adapter_project/: Makefile  README.md  README_MSVC.md  build.ps1  create_adapter  create_adapter.cpp  process_adapter  process_adapter.cpp
arm_neon_array_processor/: arm_neon_processor.h  main.cpp  test_neon
laba8/: CMakeLists.txt
laba8/src/: factorial.c  factorial.h
laba8/tests/: test_factorial.c
library_backend_cpp/: CMakeLists.txt  README.md  library_app.py
library_backend_cpp/data/: library.tsv
library_backend_cpp/rust_gui/: Cargo.toml
library_backend_cpp/rust_gui/src/: main.rs
library_backend_cpp/src/: console_menu — копия.txt  console_menu.cpp  library_backend — копия.txt  library_backend.cpp  library_backend.h  main.cpp
semka 2/laba 1/: labka.c
Лаба 2/: Aoki.c  Boki.c  Doki.c
Лаба 3/: Coki.c  Eoki.c  Foki.c  Goki.c  Hoki.c
лаба 6/: mergesort.py  prob.c
лаба 7/: laba7  laba7.md  laba7_full.c  laba7full  matrix_mult_results.txt  mirrr.c  phils  phils.c  plot_results.py  run_tests.sh
